--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root,
+body,
+html {
+  height: 100%;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  --swiper-navigation-color: #c35379;
+  --swiper-pagination-color: #c35379;
 }
